# weather-app

./: .env.sample  .gitignore  README.md  pyproject.toml
tests/: mocks.py  test_formatter.py  test_main_route.py  test_weather_service.py
weather_api/: main.py
weather_api/v1/: application_api.py  weather_response_model.py
weather_api/weather_service/: formatter.py  weather_service.py
weather_app/weather_api/: main.py
